@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.7.0
 
-1 July 2019
+15 July 2019
 
 
 1. Introduction
@@ -130,4 +130,6 @@ None
 
 21. COMPTEL interface
 ---------------------
-None
+Correctly write model attributes in GCOMModelDRBFitting class.
+
+
